<resources>
    <string name="app_name">AstroWeather</string>
    <string name="enter_data">Enter your location</string>
    <string name="latitude">Latitude </string>
    <string name="longitude">Longitude </string>
    <string name="incorrect">Incorrect entry! </string>
    <string name="button_continue">Continue </string>
    <string name="button_cancel">Cancel </string>
    <string name="refresh_interval">Refresh interval </string>
    <string name="city">or select city </string>
    <string name="none">none</string>
    <string name="select_city">Select city </string>
    <string name="add">add</string>
    <string name="title_activity_info">AstroWeather</string>
    <string name="temperature_units">Temperature units</string>
    <string name="celsius">°C</string>
    <string name="Fahrenheit">°F</string>
    <string name="add_location">Enter city name</string>


    <string name="sun">Sun </string>
    <string name="sunrise_time">Sunrise time: </string>
    <string name="sunrise_azimuth">Sunrise azimuth: </string>
    <string name="sunrise_civil">Sunrise civil time: </string>
    <string name="twilight_time">Twilight time: </string>
    <string name="twilight_azimuth">Twilight azimuth: </string>
    <string name="twilight_civil">Twilight civil time: </string>

    <string name="moon">Moon </string>
    <string name="moonrise_time">Moonrise time: </string>
    <string name="moonset_time">Moonset time: </string>
    <string name="refresh_data">Refresh data</string>

    <string name="new_moon">Next new moon: </string>
    <string name="full_moon">Next full moon: </string>
    <string name="moon_phase">Moon phase: </string>
    <string name="moon_age">Moon age: </string>
    <string name="actual_time">Actual time: </string>
    <string name="location">Location: </string>
    <string name="location_name">Lodz </string>
    <string name="no_internet">No internet connection! </string>

    <string name="todays_weather">Today\'s weather </string>
    <string name="city_name">City name: </string>
    <string name="cords">Coordinates: </string>
    <string name="time">Time: </string>
    <string name="temperature">Temperature: </string>
    <string name="pressure">Pressure: </string>
    <string name="weather">Weather: </string>
    <string name="population">Population: </string>

    <string name="forecast">Weather Forecast </string>
    <string name="date">Date: </string>

    <string name="delete">Delete  </string>

    <string name="wind_strength">Wind speed: </string>
    <string name="wind_direction">Wind direction: </string>
    <string name="humidity">Humidity: </string>
    <string name="visibility">Visibility: </string>
    <string name="clouds">Cloudiness: </string>
    <string name="last_refresh">Last update: </string>
    <string name="add_to_favourites">Add to favourites </string>


    <string name="action_settings">Settings</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>